Roll libxslt to 42f5378a0a8dee89a51aefc5a05446d3a99ec756

Bug: 771324, 727039
Change-Id: I567222401abb5cc1fff6d0d29fc52fb50cef46e4